--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="afeka.com.exe1.MainActivity">
+<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
+    <Button
+        android:onClick="btn1Click"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_weight="1"
+        android:text="@string/ac_main_btn1"
+        android:layout_height="wrap_content" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn2_act_main"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:text="@string/ac_main_btn2"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btn3_act_main"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:text="@string/ac_main_btn3"
+        android:layout_height="wrap_content" />
+
+
+
+</LinearLayout>
